Try fixing the scrollbar-induced seizure issue

--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -16,6 +16,11 @@ ol[role="list"] {
     list-style: none;
 }
 
+html {
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 /* Set core root defaults */
 html:focus-within {
     scroll-behavior: smooth;
